fix V, dynamic table calculate

--- a/app/assets/javascripts/calculating_helper.js.erb
+++ b/app/assets/javascripts/calculating_helper.js.erb
@@ -230,7 +230,7 @@ function printSum(print, specification_id, url) {
 
             async: true,
             error: function() {
-                alert("Войдите через страницу проекты")
+                // alert("Войдите через страницу проекты")
             },
             success: function (data) {
 
