--- a/app/views/table_specifications/packing_size/_form_table.html.erb
+++ b/app/views/table_specifications/packing_size/_form_table.html.erb
@@ -1,17 +1,22 @@
 <div class="col-sm-3">
 	<div class="name">Ширина</div>
-	<%= @product.width %>
+	<span id="w"><%= @product.width %></span>
 
 </div>
 <div class="col-sm-3">
 	<div class="name">Высота</div>
-	<%= @product.height %>
+	<span id="h"><%= @product.height %></span>
 </div>
 <div class="col-sm-3">
 	<div class="name">Глубина</div>
-	<%= @product.depth %>
+	<span id="d"><%= @product.depth %></span>
 </div>
 <div class="col-sm-3">
 	<div class="name">Упаковка %</div>
-	<%= number_field_tag :unit_v, 10, {name: "pack", id: "pack"} %>
+	<% if @percent_v %>
+		<%= number_field_tag :unit_v, @percent_v, {name: "pack", id: "pack"} %>
+	<% else %>
+		<%= number_field_tag :unit_v, 10, {name: "pack", id: "pack"} %>
+	<% end %>
+
 </div>
