--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -17,7 +17,7 @@
   <td><%= best_in_place [project], :planned_budget %></td>
   <td class="datapic"><input name="<%= project.id %>" data-attribute="date_delivery_client" value="<%= project.date_delivery_client%>" class="form-control" id="dp_<%= project.id %>" /></td>
   <td><%= best_in_place [project], :amount_contract %></td>
-  <td><%= Project::sum_specifications(project.specifications) %></td>
+  <td><%= Project::sum_specifications(project.specifications, "sum") %></td>
   <td><%= best_in_place [project], :client_prepayment %></td>
   <td><%= best_in_place [project], :client_surcharge %></td>
   <td><%= best_in_place [project], :status_transaction %></td>
