--- a/app/views/specifications/_specification.html.erb
+++ b/app/views/specifications/_specification.html.erb
@@ -2,7 +2,7 @@
   <% if specification.light %>
   <td><%= link_to specification.name, project_specification_table_specification_lights_path(@project, specification), 'data-no-turbolink' => true %></td>
   <td><%= check_box("print_sum", "#{specification.id}", {checked:  specification.print_sum}, "specification") %></td>
-  <td><%= TableSpecificationLight::specification_sum_all(specification) %></td>
+  <td><%= TableSpecificationLight::specification_sum_all(specification, "sum") %></td>
   <td>
     <%= link_to t('edit'), edit_project_specification_path(@project, specification), remote: true, :class => 'btn btn-sm btn-info' %>
     <%= link_to t('delete'), project_specification_path(@project, specification), remote: true, :method => :delete, data: {confirm: "Delete Customer: #{specification.name}"}, :class => 'btn btn-sm btn-danger' %>
@@ -10,7 +10,7 @@
   <% else %>
   <td><%= link_to specification.name, project_specification_table_specifications_path(@project, specification), 'data-no-turbolink' => true %></td>
   <td><%= check_box("print", "#{specification.id}", {checked: specification.print_sum}, "specification") %></td>
-  <td><%= TableSpecification::specification_sum_all(specification) %></td>
+  <td><%= TableSpecification::specification_sum_all(specification, "sum") %></td>
   <td>
     <%= link_to t('edit'), edit_project_specification_path(@project, specification), remote: true, :class => 'btn btn-sm btn-info' %>
     <%= link_to t('delete'), project_specification_path(@project, specification), remote: true, :method => :delete, data: {confirm: "Delete Customer: #{specification.name}"}, :class => 'btn btn-sm btn-danger' %>
