--- a/app/views/table_specifications/delivery/_dialog.html.erb
+++ b/app/views/table_specifications/delivery/_dialog.html.erb
@@ -5,6 +5,7 @@
 
 			</div>
 			<button type="button" class="btn btn-primary">Добавить</button>
+			<button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:20px;">Отмена</button>
 		</div>
 	</div>
 </div>
