--- a/app/views/table_specifications/photo/_dialog.html.erb
+++ b/app/views/table_specifications/photo/_dialog.html.erb
@@ -4,6 +4,7 @@
       <div class="modal-body">
       	<div class="modal-photo"></div>
       	<div class="addpict"></div>
+      	<button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:20px;">Отмена</button>
       </div>
     </div>
   </div>
