--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@project, @specification, @table_specification]) do |f| %>
+<%= form_for([@project, @specification, @table_specification], remote: true) do |f| %>
   <%= f.hidden_field :product_id %>
   <%= f.hidden_field :percent_v %>
 
@@ -38,10 +38,7 @@
         <td class="article">
           
           <%= form_for(@product) do |j| %>
-            <%= j.hidden_field :width %>
-            <%= j.hidden_field :height %>
-            <%= j.hidden_field :depth %>
-            <%= j.select :article,
+          <%= j.select :article,
                   @articles.map { |o| 
                     [o.article, o.article, {'id' => o.id}]},
                     { include_blank: true },
@@ -87,6 +84,10 @@
           <div class="delivery_data"></div>
           <br>
           <span id="uv" class="unit_v"><%= j.number_field :unit_v, {step: 0.1, class: "unit_v", value: 0} %></span>
+          <%= j.hidden_field :weight %>
+          <%= j.hidden_field :width %>
+          <%= j.hidden_field :height %>
+          <%= j.hidden_field :depth %>
         <% end %>
       <% end %>
           <br>
