--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -1,5 +1,5 @@
 <%= javascript_include_tag "table_specifications/index" %>
-<div>
+<div id="table_specification_page">
   <p id="notice"><%= notice %></p>
   <%= link_to t('table.print_pdf'), project_specification_table_specifications_path(@project, @specification, @table_specification, format: "pdf") %>
   <%= label_tag(:print_sum, t('table.print_sum')) %>
