fix submit js validate disable & change defaul value

--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -114,7 +114,7 @@
       </ul>
     <% end %>
   <div class="actions">
-    <%= f.submit :value => t('table.add_to'), name: "create_ts" %>
+    <%= f.submit :value => t('table.add_to'), name: "create_ts", disabled: true %>
   </div>
   </div>
     
