add id form button

--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -17,5 +17,5 @@
   <%= render 'table_specifications/packing_size/dialog_table' %>
     
   <%= render 'table' %>
-  <%= link_to t('table.new_row'), new_project_specification_table_specification_path, remote: true , class: "table-button btn btn-primary" %>
+  <%= link_to t('table.new_row'), new_project_specification_table_specification_path, remote: true , class: "table-button btn btn-primary", id: "form_button" %>
 </div>
