fix add button in table specification && destru line in table specification

--- a/app/assets/javascripts/table_specifications.js.erb
+++ b/app/assets/javascripts/table_specifications.js.erb
@@ -94,6 +94,8 @@ function activateBestInPlace(data_attribute) {
 }
 
 $(document).ready(function() {
+	$('#form_button').click();
+	
 	var client = new Dropbox.Client({
 	  key:    "oqe1u2h3676wzpc", // App key
 	  secret: "6d38819v60m67c1", // App secret
