--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@project, @specification, @table_specification], remote: true) do |f| %>
+<%= form_for([@project, @specification, @table_specification], remote: true, :html=>{:onsubmit=>"return loader(true);"}) do |f| %>
   <%= f.hidden_field :product_id %>
   <%= f.hidden_field :percent_v %>
 
