fix interest architector & interest company

--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -83,8 +83,7 @@
             <span><%= best_in_place pst, :group %></span>
           </td>
           <td>
-            <p style="white-space:nowrap;">Интерес %: 
-            <%= best_in_place pst, :arhitec_percent %>
+            <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
           </p>
           <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest %></span></p>
           <p>
