--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -1,9 +1,9 @@
 #table_specification_page {
 	#webtable {
-		/*width:100%;*/
+		width:100%;
 	}
 	table {
-		/*border-collapse: collapse;*/
+		border-collapse: collapse;
 	}
 	td,th,input[type=text],input[type=number],textarea{
 		font-family: Arial, Helvetica, sans-serif;
@@ -138,6 +138,7 @@
 	.architector {
 		width: 9.26%;
 	}
+
 	/*----------------------*/
 
 	input[type=file] {
