--- a/app/views/table_specifications/packing_size/_dialog.html.erb
+++ b/app/views/table_specifications/packing_size/_dialog.html.erb
@@ -4,7 +4,7 @@
 			<div class="modal-body row">
 				
 			</div>
-			<button type="button" class="btn btn-primary">Рассчитать</button>
+			<button type="button" class="btn btn-primary" disabled>Рассчитать</button>
 			<button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:20px;">Отмена</button>
 		</div>
 	</div>
