--- a/app/views/products/new.js.erb
+++ b/app/views/products/new.js.erb
@@ -27,9 +27,11 @@ $("form").submit(function() {
 	}
 
 });
-
-
-
+$('.chosen-select').chosen({
+  allow_single_deselect: false,
+  no_results_text: 'Add to Data Base',
+  width: '100%'
+});
 
 
 
