--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,19 +4,15 @@
   <div class="row">
     <div class="col-sm-8">
   <div class="form-group" id="factory">
-    <%= f.label 'Фабрика', :class => "control-label" %>
-    <%= form_for(@brand_model) do |u| %>
+    <%= fields_for(@brand_model) do |u| %>
       <%= u.select :factory_id,
-            @factories.map { |o| [o.brand, o.id] },
-            { include_blank: true },
-            { id: 'factories_select',
-            class: 'chosen-select' }
+          @factories.map { |o| 
+          [o.brand, o.id, {"id" => o.id}]},
+          { include_blank: true },
+          { id: 'factories_select',
+          class: 'chosen-select' }
       %>
-  </div>
-  <span id="err_factory"></span>
-  <div class="form-group" id="brand_model">
-    <%= f.label 'Модель', :class => "control-label" %>
-    <%= u.select :name,
+      <%= u.select :name,
           @brand_models.map { |o| 
           [o.name, o.name, {"id" => o.id}]},
           { include_blank: true },
@@ -25,20 +21,14 @@
       %>
     <% end %>
   </div>
+  <div class="form-group" id="brand_model">
+
+  </div>
   <div class="form-group">
-    <%= f.label t('products.article'), :class => "control-label" %><br>
     <%= f.text_field :article, :class => "form-control" %>
   </div>
   <div class="form-group" id="type_furniture">
-    <%= f.label t('type_furnitures.type_furniture'), :class => "control-label" %><br>
-          <%= f.select :type_furniture_id,
-            @type_furnitures.map { |o| 
-              [o.name, o.id, {'id' => o.id}]},
-              { include_blank: true },
-              { id: 'articles_select',
-              class: 'chosen-select' }
-            %>
-    <span id="err_furniture"></span>
+
   </div>
   <div class="v">
     <div class="form-group col-xs-3">
@@ -73,6 +63,6 @@
 
   </div>
   <div class="actions">
-     <%= f.submit  @product.new_record? ?  t('create') :  t('update'), :class => "btn btn-primary" %>
+     <%= f.submit %>
   </div>
 <% end %>
