--- a/app/views/table_specifications/_table_specification.html.erb
+++ b/app/views/table_specifications/_table_specification.html.erb
@@ -22,7 +22,7 @@
     <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest %></span> €</p>
   </td>
   <td class="full_price" ><%= ts.unit_price %></td>
-  <td class="full_sum"><%= ts.with_interest %></td>
+  <td class="full_sum"><%= ts.summa %></td>
   <td class="v v_table">
     <%= link_to image_tag('delivery.png'), '#', {class: "deliv invoker"} %>
     <%= hidden_field_tag :delivery_id %>
