fix with_interest to summa in table_specification & change ajax path

--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -63,10 +63,6 @@
 	.chosen-container-single .chosen-single span {
 		margin-right:0;
 	}
-	.modal-dialog {
-		display:table;
-		width:auto;
-	}
 	#modalv .modal-dialog, #modalfactory .modal-dialog {
 		width:400px;
 	}
@@ -221,6 +217,7 @@
 		 border-color: #999;
 	}
 }
+/* end modal window*/
 
 /*****cropper styles*****/
 #fileInput{
