Product in process ...

--- a/app/assets/javascripts/table_specifications.js.erb
+++ b/app/assets/javascripts/table_specifications.js.erb
@@ -364,6 +364,6 @@ $(document).ready(function() {
 	     extraSpace : 0
 	});
 	$("table").stickyTableHeaders();
-	$('.addpict').simpleCropper();
+	// $('.addpict').simpleCropper();
 
 });
