w fix product call cropper

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -72,6 +72,7 @@
     <div class="addpict"></div>
   </div>
     <%= f.hidden_field :photo_base64_form %>
+    <%= f.hidden_field :size_image_base64_form %>
   </div>
 
   </div>
